--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         
         <label class="logo"> <img src="logo_3.png"  srcset="" ></label>
         <ul>
-          <li><a  href="#">Home</a></li>
+         <li><a  href="https://bppimt-2023.github.io/Home-Cruzamento/#">Home</a></li>
           <li><a class="active" href="#">Team</a></li>
-          <li><a href="#">Pre-Events</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Memories</a></li>
+          <li><a  href="https://bppimt-2023.github.io/Cruzemento-PreEvent/">Pre-Events</a></li>
+          <li><a href="https://bppimt-2023.github.io/Cruzamento-Event/">Events</a></li>
+          <li><a href="https://bppimt-2023.github.io/Cruzemento-Memories/">Memories</a></li>
         </ul>
       </nav>
       <div class="container" style="z-index: -1;">
