--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="container" style="z-index: -1;">
         <h1 class="main"><center>Ultimate Alliance</center>
          </h1>
-        <a href="https://bppimt-2023.github.io/Team-Cruzemento/" class="btn">To The Game</a> 
+        <a href="https://nandybishal23.github.io/Ultimate-Alliance/" class="btn">To The Game</a> 
     </div>
     <div class="container" >
         <div class="row">
