--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
     
     <div class="container1" >
-        <h1 class="title"style="z-index: -1;">Team Leaders</h1>
+        <h1 class="title"style="z-index: -1;">T E A M S</h1>
         <div class="row">
             <div class="col-3">
                 <img src="revengers.jpg" alt="" srcset="" value="PLAY" onclick="playAudio1()">
