--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <audio id="baby" src="sentinels.mp3" ></audio>
             </div>
             <div class="col-3">
-              <center><img src="mind.png" alt="" srcset="" class="stone"></center>
+              <center><img src="time.png" alt="" srcset="" class="stone">&nbsp;&nbsp;&nbsp;&nbsp;<img src="mind.png" alt="" srcset="" class="stone"></center>
                 <img src="strange.jpg" alt="" srcset="" onclick="playAudio4()">
                 <center>
               
